; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_send.c_rds_ib_send_unmap_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_send.c_rds_ib_send_unmap_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_ib_connection = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.rm_data_op = type { i64, i32 }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rds_ib_connection*, %struct.rm_data_op*, i32)* @rds_ib_send_unmap_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_ib_send_unmap_data(%struct.rds_ib_connection* %0, %struct.rm_data_op* %1, i32 %2) #0 {
  %4 = alloca %struct.rds_ib_connection*, align 8
  %5 = alloca %struct.rm_data_op*, align 8
  %6 = alloca i32, align 4
  store %struct.rds_ib_connection* %0, %struct.rds_ib_connection** %4, align 8
  store %struct.rm_data_op* %1, %struct.rm_data_op** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rm_data_op*, %struct.rm_data_op** %5, align 8
  %8 = getelementptr inbounds %struct.rm_data_op, %struct.rm_data_op* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %3
  %12 = load %struct.rds_ib_connection*, %struct.rds_ib_connection** %4, align 8
  %13 = getelementptr inbounds %struct.rds_ib_connection, %struct.rds_ib_connection* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.rm_data_op*, %struct.rm_data_op** %5, align 8
  %18 = getelementptr inbounds %struct.rm_data_op, %struct.rm_data_op* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.rm_data_op*, %struct.rm_data_op** %5, align 8
  %21 = getelementptr inbounds %struct.rm_data_op, %struct.rm_data_op* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i32, i32* @DMA_TO_DEVICE, align 4
  %24 = call i32 @ib_dma_unmap_sg(i32 %16, i32 %19, i64 %22, i32 %23)
  br label %25

25:                                               ; preds = %11, %3
  ret void
}

declare dso_local i32 @ib_dma_unmap_sg(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
